--- a/index.html
+++ b/index.html
@@ -14,5 +14,5 @@
 </div>
 </body>
 <script src="agora-rtm-sdk-1.5.1.js"></script>
-<script src="script.js"></script>
+<script src="main.js"></script>
 </html>
