--- a/index.html
+++ b/index.html
@@ -12,6 +12,21 @@
     <video class="video-player" id="user-1" autoplay playsinline></video>
     <video class="video-player" id="user-2" autoplay playsinline></video>
 </div>
+<div id = "controls">
+
+    <div class="control_container" id="camera-btn">
+        <img src="camera.png" alt="camera_button">
+    </div>
+    <div class="control_container" id="mic-btn">
+        <img src="mic.png" alt="mic_button">
+    </div>
+    <a href="lobby.html">
+    <div class="control_container" id="leave-btn">
+        <img src="phone.png" alt="leave_button">
+    </div>
+    </a>
+
+</div>
 </body>
 <script src="agora-rtm-sdk-1.5.1.js"></script>
 <script src="main.js"></script>
